[add] tre sezioni

--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -2,4 +2,6 @@ $prymari-clr:#f3b329;
 $secondari-clr:#3da698;
 $dark-clr:#000000;
 $light-clr:#ffffff;
-$tundra-clr:#434343
+$tundra-clr:#434343;
+$success-clr:#3da698;
+$bleh-clr:#fef7e9;
